--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,1 +1,24 @@
 # XML을 대체하는 문서 / YML, YXML
+name: Deploy React to EC2
+
+on:
+  # ~ 했을때
+  push:
+    # push 했을 때
+    branches:
+      # 브랜치에
+      - main
+      # 메인 브랜치에
+
+jobs:
+  # 작업들
+  test:
+    # 작업 명
+    runs-on: ubuntu-latest
+    # 작업 환경
+    steps:
+      # 작업들을 순서에 맞춰서 작성
+      - name: "testing"
+        # 작업명을 testing 이고
+        run: echo "now test"
+        # 작업 내용은 echo "now test"
